# correct-cd

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md
prototype/: dataset.py  eval.py  ranker.py
shell/: ccd.bash  ccd.fish  ccd.zsh
src/: config.rs  lib.rs  matcher.rs  rank.rs  seed.rs  store.rs
test/: Dockerfile  integration.zsh
